jsonschemadsl2ecore.trafo.opt/test/test39/validtests/example6.test39
{
	"family":{
		"personalInfo":{
			 "name":"john",
			"surname":"doe"
		},
		"professionalInfo":{
			"job":"engineer",
			"level":1
		}
	},
	"telephone":"05040404",
	"country":"Italia"
}